get top 10 api
